# rmail

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
